--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest  --silent --verbose",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "cypress": "cypress run --browser chrome",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@types/node": "20.2.5",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "cypress": "^12.14.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-fetch-mock": "^3.0.3"
